tests/integration/snapshots/integration__conformance__n_number_invalid+-.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[0e+-1]
stderr ---
error: expected digit after exponent indicator, found `-`
 --> stdin:1:5
  |
1 | [0e+-1]
  |  ---^
  |  ||
  |  |exponent indicator found here
  |  number with exponent found here
